--- a/FrontEndProjects/TributePage/index.css
+++ b/FrontEndProjects/TributePage/index.css
@@ -3,5 +3,60 @@ body {
     background-color: white;
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.left-pane {
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border-radius: 2%; 
     
+}
+
+.left-pane > img {
+    margin: 2%;
+    border: 2px solid white;
+}
+
+.left-pane > ul {
+    margin-top: 10%;
+    font-size: 15px;
+}
+
+.right-pane {
+    height: 100%;
+}
+
+.right-pane > h1 {
+    font-size: 60px;
+
+}
+
+.content-pane {
+    background-color: lightgrey;
+    margin-top: 3%;
+}
+
+.content-pane > ul {
+    margin-top: 5%; 
+}
+
+.pull-quote {
+    float: right;
+    width: 200px;
+    color: #030;
+    font-size: 26px;
+    line-height: 0.9;
+    font-style: italic;
+    padding: 13px;
+}
+
+blockquote {
+    margin: 0;
+}
+
+.pull-quote p:first-letter {
+    font-size: 39px;
+    font-weight: bold;
 }
